// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FirstOffer with age disclaimer, without discount and base 1`] = `
<a
  className="offer"
  href="url"
  rel="noopener"
  target="_blank"
>
  <div
    className="offerInfo"
  >
    <div
      className="offerContent"
    >
      <div
        className="priceInfo"
      >
        <div
          className="price"
        >
          <div
            className="price"
          >
            <div
              className="priceWrapper"
            >
              <div
                className="current"
              >
                76 990 руб.
              </div>
            </div>
          </div>
        </div>
        <div
          className="discount"
        />
      </div>
      <div
        className="deliveryInfo"
      >
        <div
          className="delivery"
        >
          <div
            className="icon deliveryIcon deliveryManIcon"
          />
          <span
            className="info"
          >
            Бесплатно, завтра
          </span>
        </div>
        <div
          className="shop"
        >
          <div>
            Яндекс.Маркет
             
            5
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button"
  >
    <button
      className="button big"
      type="button"
    >
      <span>
        
      </span>
    </button>
  </div>
</a>
`;

exports[`FirstOffer with base price and discount, without disclaimer 1`] = `
<a
  className="offer"
  href="url"
  rel="noopener"
  target="_blank"
>
  <div
    className="offerInfo"
  >
    <div
      className="offerContent"
    >
      <div
        className="priceInfo"
      >
        <div
          className="price"
        >
          <div
            className="price"
          >
            <div
              className="priceWrapper"
            >
              <div
                className="current newCurrentPrice"
              >
                53 990 руб.
              </div>
              <div
                className="old"
              >
                107 980 руб.
              </div>
            </div>
          </div>
        </div>
        <div
          className="discount"
        >
          <div
            className="discount"
          >
            – 
            50
            %
          </div>
        </div>
      </div>
      <div
        className="deliveryInfo"
      >
        <div
          className="delivery"
        >
          <div
            className="icon deliveryIcon deliveryManIcon"
          />
          <span
            className="info"
          >
            Бесплатно
          </span>
        </div>
        <div
          className="shop"
        >
          <div>
            OZON.ru
             
            4
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button"
  >
    <button
      className="button big"
      type="button"
    >
      <span>
        
      </span>
    </button>
  </div>
</a>
`;

exports[`FirstOffer with base price, discount and age disclaimer 1`] = `
<a
  className="offer"
  href="url"
  rel="noopener"
  target="_blank"
>
  <div
    className="offerInfo"
  >
    <div
      className="offerContent"
    >
      <div
        className="priceInfo"
      >
        <div
          className="price"
        >
          <div
            className="price"
          >
            <div
              className="priceWrapper"
            >
              <div
                className="current newCurrentPrice"
              >
                53 990 руб.
              </div>
              <div
                className="old"
              >
                107 980 руб.
              </div>
            </div>
          </div>
        </div>
        <div
          className="discount"
        >
          <div
            className="discount"
          >
            – 
            50
            %
          </div>
        </div>
      </div>
      <div
        className="deliveryInfo"
      >
        <div
          className="delivery"
        >
          <div
            className="icon deliveryIcon deliveryManIcon"
          />
          <span
            className="info"
          >
            Бесплатно
          </span>
        </div>
        <div
          className="shop"
        >
          <div>
            OZON.ru
             
            4
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button"
  >
    <button
      className="button big"
      type="button"
    >
      <span>
        
      </span>
    </button>
  </div>
</a>
`;

exports[`FirstOffer without base price and discount, age disclaimer 1`] = `
<a
  className="offer"
  href="url"
  rel="noopener"
  target="_blank"
>
  <div
    className="offerInfo"
  >
    <div
      className="offerContent"
    >
      <div
        className="priceInfo"
      >
        <div
          className="price"
        >
          <div
            className="price"
          >
            <div
              className="priceWrapper"
            >
              <div
                className="current"
              >
                53 990 руб.
              </div>
            </div>
          </div>
        </div>
        <div
          className="discount"
        />
      </div>
      <div
        className="deliveryInfo"
      >
        <div
          className="delivery"
        >
          <div
            className="icon deliveryIcon deliveryManIcon"
          />
          <span
            className="info"
          >
            Бесплатно
          </span>
        </div>
        <div
          className="shop"
        >
          <div>
            OZON.ru
             
            4
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button"
  >
    <button
      className="button big"
      type="button"
    >
      <span>
        
      </span>
    </button>
  </div>
</a>
`;
